pkg/lang/testdata/types/invalid/object-field-no-type-key.ub
t: object({
  name: { foo: 'bar' },
})
